--- a/Compile/Compile.vcxproj.filters
+++ b/Compile/Compile.vcxproj.filters
@@ -3,9 +3,15 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="lexical_analysis.cpp" />
+    <ClCompile Include="syntax_analysis.cpp" />
+    <ClCompile Include="common.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="lexical_analysis.h" />
     <ClInclude Include="common.h" />
+    <ClInclude Include="syntax_analysis.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="grammar.txt" />
   </ItemGroup>
 </Project>
