--- a/Compile/Compile.vcxproj.filters
+++ b/Compile/Compile.vcxproj.filters
@@ -5,11 +5,13 @@
     <ClCompile Include="lexical_analysis.cpp" />
     <ClCompile Include="syntax_analysis.cpp" />
     <ClCompile Include="common.cpp" />
+    <ClCompile Include="code_gen.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="lexical_analysis.h" />
     <ClInclude Include="common.h" />
     <ClInclude Include="syntax_analysis.h" />
+    <ClInclude Include="code_gen.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="grammar.txt" />
