--- a/Compile/Compile.vcxproj
+++ b/Compile/Compile.vcxproj
@@ -19,12 +19,14 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="code_gen.cpp" />
     <ClCompile Include="common.cpp" />
     <ClCompile Include="lexical_analysis.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="syntax_analysis.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="code_gen.h" />
     <ClInclude Include="common.h" />
     <ClInclude Include="lexical_analysis.h" />
     <ClInclude Include="syntax_analysis.h" />
